deps/v8/test/message/fail/redeclaration4.out
*%(basename)s:9: SyntaxError: Identifier 'foo' has already been declared
  function foo() {}
  ^
SyntaxError: Identifier 'foo' has already been declared

